welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: Unit does not take parameters
    avance()()
            ^